fix some alignment issues

--- a/client/src/components/approvepane/ApprovePane.css
+++ b/client/src/components/approvepane/ApprovePane.css
@@ -1,6 +1,19 @@
 .approvepane
 {
     text-align: left;
+    padding: 10px;
+    position: relative;
+    /* position: absolute; */
+    overflow-y: auto;
+    overflow-x: none;
+    border-bottom-color: lightgrey;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+}
+@media only screen and (min-width: 600px) {
+.approvepane
+{
+    text-align: left;
     padding: 20px;
     position: relative;
     /* position: absolute; */
@@ -11,4 +24,5 @@
     border-bottom-color: lightgrey;
     border-bottom-width: 1px;
     border-bottom-style: solid;
+}
 }
