--- a/client/src/components/homepane/HomePane.css
+++ b/client/src/components/homepane/HomePane.css
@@ -1,21 +1,23 @@
 .homepane{
-    text-align: left;
+    text-align: center;
     margin-top: 30px;
     padding-right: 10px;
+    padding-bottom:10px;
     position: relative;
     width: 100%;
-    height: -moz-calc(100vh - 250px);
+    height: 100%;
+    /* height: -moz-calc(100vh - 250px);
     height: -webkit-calc(100vh - 250px);
-    height: calc(100vh - 250px);
+    height: calc(100vh - 250px); */
     display:flex;
     flex-direction: column;
-    align-items: flex-start;
+    /* align-items: flex-ce; */
 }
 
 .rowlist {
     position: relative;
     overflow-y: auto;
-   
+text-align : left;
     display: block;
 }
 
