--- a/client/src/components/navpanel/NavPanel.css
+++ b/client/src/components/navpanel/NavPanel.css
@@ -1,11 +1,18 @@
 .navpanel{
-    padding: 50px;
-    height: -moz-calc(100% - 60px);
-    height: -webkit-calc(100% - 60px);
-    height: calc(100% - 60px);
+    height:100%;
     width: 100%;
-     position:absolute; 
+    position:absolute; 
     background-image: "/bg.png";
+}
+
+@media only screen and (min-width: 600px) {
+        
+    .navpanel{
+        padding: 50px;
+        height: -moz-calc(100% - 60px);
+        height: -webkit-calc(100% - 60px);
+        height: calc(100% - 60px);
+    }
 }
 
 .activecurie {
